Changing Group visibility in the Outliner doen't update viewport in render mode. #46896

Closed
opened 2015-11-29 20:29:31 +01:00 by Miguel Porces · 4 comments

System Information
Ubuntu 14.04 - intel 945gm

Blender Version
Broken: (example: 2.76rc3 fb78f6d)
Worked: (optional)

Short description of error
toggling a group visibility in the outliner, will not update the viewport if in render mode

Exact steps for others to reproduce the error

  • create a group with the default cube
  • viewport to render mode (BI or Cycles, same result)
  • set the view in the outliner to 'Groups'
  • change the visibility of the group

result, the viewport will still reflect the initial flag

**System Information** Ubuntu 14.04 - intel 945gm **Blender Version** Broken: (example: 2.76rc3 fb78f6d) Worked: (optional) **Short description of error** toggling a group visibility in the outliner, will not update the viewport if in render mode **Exact steps for others to reproduce the error** - create a group with the default cube - viewport to render mode (BI or Cycles, same result) - set the view in the outliner to 'Groups' - change the visibility of the group result, the viewport will still reflect the initial flag
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Secrop

Added subscriber: @Secrop

This issue was referenced by f448659a56

This issue was referenced by f448659a56210a093570bafa868a3a19761e67df

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46896
No description provided.