Fix T46896: Outliner group 'hide' doesn't update viewport render